--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ plugins {
 if (project.hasProperty("tag")) {
     project.version = project.property("tag")
 } else if (project.hasProperty("enterprise")) {
-    project.version = "4.1.2E" // craftercms enterprise version flag
+    project.version = "4.1.3E-BETA" // craftercms enterprise version flag
 } else {
-    project.version = "4.1.2" // craftercms version flag
+    project.version = "4.1.3-SNAPSHOT" // craftercms version flag
 }
 
 ext {
