Removed vim from the list of pre-installed software to a security concern. Will put vim back once that issue with vim is resolved.

--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -55,7 +55,7 @@ RUN set -eux; \
     apk add --no-cache rsync; \
     apk add --no-cache iproute2; \
     apk add --no-cache procps; \
-    apk add --no-cache vim; \
+#    apk add --no-cache vim; \
     apk add --no-cache nano;
 
 # Install gosu
