--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,11 @@ ext {
     imagesDir = "${projectDir}/images"
     imagesBuildDir = "${buildDir}/images"
     tempDir = "${buildDir}/temp"
+    libDir = "${projectDir}/lib"
 
     downloadsRootFolder = "${project.version}"
     authoringBuildTarget = 'main'
-    
+
     if (project.hasProperty("enterprise")) {
         downloadsRootFolder = "ent/${project.version}"
         authoringBuildTarget = 'enterprise'
@@ -98,7 +99,7 @@ ext {
         "apache-tomcat/webapps/crafter-profile*",
         "apache-tomcat/webapps/ROOT",
         "apache-tomcat/webapps/studio",
-        "**/*.pid"   
+        "**/*.pid"
     ]
 
     defaultTomcatLocalBinExcludes = [
@@ -119,7 +120,7 @@ ext {
 task downloadAuthoringBundle(type: Download) {
     src authoringBundleUrl
     overwrite false
-    dest authoringBundleFile 
+    dest authoringBundleFile
 }
 
 task downloadDeliveryBundle(type: Download) {
@@ -144,7 +145,7 @@ task prepareAuthoringBundle() {
     if (!file(authoringBundleRoot).exists()) {
         if (authoringBundleUrl) {
             dependsOn downloadAuthoringBundle
-            dependsOn expandAuthoringBundle            
+            dependsOn expandAuthoringBundle
         } else if (file(authoringBundleFile).file) {
             dependsOn expandAuthoringBundle
         } else {
@@ -154,15 +155,15 @@ task prepareAuthoringBundle() {
                     into authoringBundleRoot
                 }
             }
-        } 
-    }     
+        }
+    }
 }
 
 task prepareDeliveryBundle() {
     if (!file(deliveryBundleRoot).exists()) {
         if (deliveryBundleUrl) {
             dependsOn downloadDeliveryBundle
-            dependsOn expandDeliveryBundle            
+            dependsOn expandDeliveryBundle
         } else if (file(deliveryBundleFile).file) {
             dependsOn expandDeliveryBundle
         }  else {
@@ -172,7 +173,7 @@ task prepareDeliveryBundle() {
                     into deliveryBundleRoot
                 }
             }
-        } 
+        }
     }
 }
 
@@ -187,7 +188,7 @@ task copyAuthoringCustomWebapps() {
                     into "${authoringBundleRoot}/bin/apache-tomcat/webapps"
                 }
             }
-        } 
+        }
     }
 }
 
@@ -227,6 +228,11 @@ task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tom
             exclude defaultTomcatBinExcludes
         }
 
+        copy {
+            from "${libDir}/"
+            into "${buildDir}/mariadb-lib-deps"
+        }
+
         exec {
             commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatImageName}:${project.version}", buildDir
         }
@@ -252,6 +258,11 @@ task buildAuthoringLocal(group: "Build", description: "Builds the Authoring Tomc
             from "${authoringBundleRoot}/bin/"
             into "${buildDir}/bin"
             exclude defaultTomcatLocalBinExcludes
+        }
+
+        copy {
+            from "${libDir}/"
+            into "${buildDir}/mariadb-lib-deps"
         }
 
         exec {
@@ -314,7 +325,7 @@ task buildDeployer(group: "Build", description: "Builds the Deployer Docker imag
         }
         copy {
             from "${deliveryBundleRoot}/bin/"
-            into "${buildDir}/bin"     
+            into "${buildDir}/bin"
             exclude "migration"
             exclude "upgrade"
             exclude "cli"
@@ -357,7 +368,7 @@ task buildProfile(group: "Build", description: "Builds the Profile Docker image"
         exec {
             commandLine 'docker', 'build', '-t', "${project.profileImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildGitSshServer(group: "Build", description: "Builds the Git SSH Server Docker image")  {
@@ -375,7 +386,7 @@ task buildGitSshServer(group: "Build", description: "Builds the Git SSH Server D
         exec {
             commandLine 'docker', 'build', '-t', "${project.gitSshServerImageName }:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildGitHttpsServer(group: "Build", description: "Builds the Git HTTPS Server Docker image")  {
@@ -393,7 +404,7 @@ task buildGitHttpsServer(group: "Build", description: "Builds the Git HTTPS Serv
         exec {
             commandLine 'docker', 'build', '-t', "${project.gitHttpsServerImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker image")  {
@@ -411,7 +422,7 @@ task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker im
         exec {
             commandLine 'docker', 'build', '-t', "${project.logrotateImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildMainImages(group: "Build", description: "Builds main Docker images") {
