Add missing libssl for MariaDB

--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -85,12 +85,13 @@ RUN apk add --update --no-cache -t .mariadb-run-deps \
         linux-pam \
         make \
         pcre \
-	openssl \
+        openssl \
         pwgen \
         sudo \
         tzdata \
         xz-libs \
         zlib;
+COPY ./mariadb-lib-deps/* /usr/lib/
 
 # Create folders and make CRAFTER_HOME the workdir
 RUN mkdir -p /opt/crafter; \
