--- a/build.gradle
+++ b/build.gradle
@@ -32,19 +32,19 @@ plugins {
 if (project.hasProperty("tag")) {
     project.version = project.property("tag")
 } else if (project.hasProperty("enterprise")) {
-    project.version = "4.1.2E-BETA" // craftercms enterprise version flag
+    project.version = "4.2.0E-BETA" // craftercms enterprise version flag
 } else {
-    project.version = "4.1.2-SNAPSHOT" // craftercms version flag
+    project.version = "4.2.0-SNAPSHOT" // craftercms version flag
 }
 
 ext {
     imagesDir = "${projectDir}/images"
     imagesBuildDir = "${buildDir}/images"
     tempDir = "${buildDir}/temp"
+    libDir = "${projectDir}/lib"
 
     downloadsRootFolder = "${project.version}"
     authoringBuildTarget = 'main'
-    
     if (project.hasProperty("enterprise")) {
         downloadsRootFolder = "ent/${project.version}"
         authoringBuildTarget = 'enterprise'
@@ -98,7 +98,7 @@ ext {
         "apache-tomcat/webapps/crafter-profile*",
         "apache-tomcat/webapps/ROOT",
         "apache-tomcat/webapps/studio",
-        "**/*.pid"   
+        "**/*.pid"
     ]
 
     defaultTomcatLocalBinExcludes = [
@@ -119,13 +119,25 @@ ext {
 task downloadAuthoringBundle(type: Download) {
     src authoringBundleUrl
     overwrite false
-    dest authoringBundleFile 
+    dest authoringBundleFile
 }
 
 task downloadDeliveryBundle(type: Download) {
     src deliveryBundleUrl
     overwrite false
     dest deliveryBundleFile
+}
+
+task downloadLibSsl(type: Download) {
+    src 'https://downloads.craftercms.org/misc/libssl.so.1.1'
+    overwrite false
+    dest "${libDir}/libssl.so.1.1"
+}
+
+task downloadLibCrypto(type: Download) {
+    src 'https://downloads.craftercms.org/misc/libcrypto.so.1.1'
+    overwrite false
+    dest "${libDir}/libcrypto.so.1.1"
 }
 
 task expandAuthoringBundle(type: Copy) {
@@ -141,10 +153,12 @@ task expandDeliveryBundle(type: Copy) {
 }
 
 task prepareAuthoringBundle() {
+    dependsOn downloadLibSsl
+    dependsOn downloadLibCrypto
     if (!file(authoringBundleRoot).exists()) {
         if (authoringBundleUrl) {
             dependsOn downloadAuthoringBundle
-            dependsOn expandAuthoringBundle            
+            dependsOn expandAuthoringBundle
         } else if (file(authoringBundleFile).file) {
             dependsOn expandAuthoringBundle
         } else {
@@ -154,15 +168,15 @@ task prepareAuthoringBundle() {
                     into authoringBundleRoot
                 }
             }
-        } 
-    }     
+        }
+    }
 }
 
 task prepareDeliveryBundle() {
     if (!file(deliveryBundleRoot).exists()) {
         if (deliveryBundleUrl) {
             dependsOn downloadDeliveryBundle
-            dependsOn expandDeliveryBundle            
+            dependsOn expandDeliveryBundle
         } else if (file(deliveryBundleFile).file) {
             dependsOn expandDeliveryBundle
         }  else {
@@ -172,7 +186,7 @@ task prepareDeliveryBundle() {
                     into deliveryBundleRoot
                 }
             }
-        } 
+        }
     }
 }
 
@@ -187,7 +201,7 @@ task copyAuthoringCustomWebapps() {
                     into "${authoringBundleRoot}/bin/apache-tomcat/webapps"
                 }
             }
-        } 
+        }
     }
 }
 
@@ -227,6 +241,11 @@ task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tom
             exclude defaultTomcatBinExcludes
         }
 
+        copy {
+            from "${libDir}/"
+            into "${buildDir}/mariadb-lib-deps"
+        }
+
         exec {
             commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatImageName}:${project.version}", buildDir
         }
@@ -252,6 +271,11 @@ task buildAuthoringLocal(group: "Build", description: "Builds the Authoring Tomc
             from "${authoringBundleRoot}/bin/"
             into "${buildDir}/bin"
             exclude defaultTomcatLocalBinExcludes
+        }
+
+        copy {
+            from "${libDir}/"
+            into "${buildDir}/mariadb-lib-deps"
         }
 
         exec {
@@ -314,7 +338,7 @@ task buildDeployer(group: "Build", description: "Builds the Deployer Docker imag
         }
         copy {
             from "${deliveryBundleRoot}/bin/"
-            into "${buildDir}/bin"     
+            into "${buildDir}/bin"
             exclude "migration"
             exclude "upgrade"
             exclude "cli"
@@ -357,7 +381,7 @@ task buildProfile(group: "Build", description: "Builds the Profile Docker image"
         exec {
             commandLine 'docker', 'build', '-t', "${project.profileImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildGitSshServer(group: "Build", description: "Builds the Git SSH Server Docker image")  {
@@ -375,7 +399,7 @@ task buildGitSshServer(group: "Build", description: "Builds the Git SSH Server D
         exec {
             commandLine 'docker', 'build', '-t', "${project.gitSshServerImageName }:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildGitHttpsServer(group: "Build", description: "Builds the Git HTTPS Server Docker image")  {
@@ -393,7 +417,7 @@ task buildGitHttpsServer(group: "Build", description: "Builds the Git HTTPS Serv
         exec {
             commandLine 'docker', 'build', '-t', "${project.gitHttpsServerImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker image")  {
@@ -411,7 +435,7 @@ task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker im
         exec {
             commandLine 'docker', 'build', '-t', "${project.logrotateImageName}:${project.version}", buildDir
         }
-    }    
+    }
 }
 
 task buildMainImages(group: "Build", description: "Builds main Docker images") {
